<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:weightSum="2" >

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/volver" />

        <Button
            android:id="@+id/button2"
            android:layout_width="370dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Boton1.1" />

        <TextView
            android:id="@+id/text"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/Text1" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/Text2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        android:weightSum="2" >

        <RelativeLayout
            android:id="@+id/relativelayout1"
            android:layout_width="170dp"
            android:layout_height="fill_parent" >

            <ImageButton
                android:id="@+id/button6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/add"
                android:text="@string/Boton3" />

            <ImageButton
                android:id="@+id/button7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/button6"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/less"
                android:text="@string/Boton3" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/button6"
                android:layout_toRightOf="@+id/button6"
                android:gravity="center"
                android:text="1"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/button7"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/flash_light"
                android:text="@string/Boton3" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout2"
            android:layout_width="200dp"
            android:layout_height="fill_parent" >
             
             <android.gesture.GestureOverlayView
                 android:id="@+id/gestures"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:gestureColor="#ffffffff"
                 android:gestureStrokeType="single"
                 android:uncertainGestureColor="#ffffffff" />

            <ImageView
                android:id="@+id/linear1"
                android:layout_width="90dp"
                android:layout_height="5dp"
                android:layout_marginLeft="60dp"
                android:background="#000000"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="90dp"
                android:layout_height="170dp"
                android:layout_marginLeft="60dp"
                android:layout_below="@+id/linear1"
                android:src="@drawable/car" />

            <ImageView
                android:id="@+id/linear2"
                android:layout_width="40dp"
                android:layout_height="5dp"
                android:layout_below="@+id/image"
                android:layout_marginLeft="60dp"
                android:background="#000000"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/linear3"
                android:layout_width="40dp"
                android:layout_height="5dp"
                android:layout_below="@+id/image"
                
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/linear2"
                android:background="#000000"
                android:orientation="horizontal" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/view4"
                android:layout_width="15dp"
                android:layout_height="30dp"
                
                android:layout_marginLeft="25dp"
                android:layout_marginTop="45dp"
                android:background="#000000"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/view5"
                android:layout_width="15dp"
                android:layout_height="45dp"
                
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@+id/view4"
                android:background="#000000"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/view6"
                android:layout_width="15dp"
                android:layout_height="60dp"
                
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/view5"
                android:background="#000000"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/view6"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/view6"
                android:gravity="center"
                android:text="1"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/button5"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_below="@+id/text5"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/freno"
                android:text="@string/Boton4" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
