<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/linearlayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
      
    >
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:weightSum="4" >
        
        <RelativeLayout
            android:id="@+id/relativelayout1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="40dp" >

            <ImageButton
            android:id="@+id/button10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            
            android:src="@drawable/volver" />
            
            
            <ImageButton
                android:id="@+id/button6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button10"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/chooseimage"
                android:text="@string/Boton3" />
            </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/relativelayout2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" 
            android:paddingRight="40dp">
            
             <ImageButton
                 android:id="@+id/butm1"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:background="#FFFFFF" />

            <ImageButton
                android:id="@+id/butm2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm1"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            
             <ImageButton
                android:id="@+id/butm3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/butm2"
                 android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm3"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            
             <ImageButton
                android:id="@+id/butm5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm4"
                android:layout_marginTop="10dp"
               
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/butm1"
                 android:layout_marginLeft="40dp"
                 
                android:layout_marginTop="10dp"
               
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm6"
                 android:layout_alignBottom="@+id/butm6"
                android:layout_marginTop="10dp"
               
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/butm7"
                 android:layout_alignBottom="@+id/butm7"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm9"
                android:layout_width="40dp"
                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm8"
                 android:layout_alignBottom="@+id/butm8"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm10"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/butm9"
                 android:layout_alignBottom="@+id/butm9"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm11"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/butm6"
                 android:layout_marginLeft="40dp"
                 
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm12"
                android:layout_width="40dp"
                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm11"
                 android:layout_alignBottom="@+id/butm11"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm13"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/butm12"
                 android:layout_alignBottom="@+id/butm12"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm14"
                android:layout_width="40dp"
                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm13"
                 android:layout_alignBottom="@+id/butm13"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm15"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/butm14"
                 android:layout_alignBottom="@+id/butm14"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm16"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/butm11"
                 android:layout_marginLeft="40dp"
                 
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm17"
                android:layout_width="40dp"
                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm16"
                 android:layout_alignBottom="@+id/butm16"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm18"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/butm17"
                 android:layout_alignBottom="@+id/butm17"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm19"
                android:layout_width="40dp"
                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm18"
                 android:layout_alignBottom="@+id/butm18"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm20"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/butm19"
                 android:layout_alignBottom="@+id/butm19"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm21"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/butm16"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm22"
                android:layout_width="40dp"
                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm21"
                 android:layout_alignBottom="@+id/butm21"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm23"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/butm22"
                 android:layout_alignBottom="@+id/butm22"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm24"
                android:layout_width="40dp"
                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_toRightOf="@+id/butm23"
                 android:layout_alignBottom="@+id/butm23"
                android:layout_marginTop="10dp"
                
                android:background="#FFFFFF"
                 />
            <ImageButton
                android:id="@+id/butm25"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/butm24"
                 android:layout_alignBottom="@+id/butm24"
                android:layout_marginTop="10dp"
               
                android:background="#FFFFFF"
                 />
            
            </RelativeLayout>
         <RelativeLayout
            android:id="@+id/relativelayout3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
             >
            <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:background="#FFFFFF"
            android:text="@string/BSol" 
             android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
            
            />
             <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:background="#FFFFFF"
            android:text="@string/BRec" 
            android:layout_below="@+id/button11"
             android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
            
            />
              <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:background="#FFFFFF"
            android:text="@string/BDesc" 
             android:layout_marginLeft="10dp"
             android:layout_below="@+id/button12"
                 android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
            
            />
        </RelativeLayout>
        </LinearLayout>
    
    </LinearLayout>








